# vee

./: .gitignore  CMakeLists.txt  TODO.md  VeeEditor.cpp  editor.cpp  engine.cpp  main.cpp
.editor_data/scenes/: scene1.scene  scene2.scene  scene3.scene
roadmaps/: renderer.md
src/: engine.cpp  engine.h
src/editor/: editor.cpp  editor.h
src/editor/assets/scenes/: empty.scene
src/editor/commands/: create_entity_in_scene.cpp  create_entity_in_scene.h  delete_entity.cpp  delete_entity.h  editor_command.h  reload_current_scene_from_file.cpp  reload_current_scene_from_file.h  save_scene.cpp  save_scene.h
src/editor/io/: shortcut_manager.cpp  shortcut_manager.h
src/editor/renderer/shaders/picking/: picking.frag  picking.vert
src/editor/renderer/vulkan/: vulkan_renderer_with_ui.cpp  vulkan_renderer_with_ui.h
src/editor/scenes/: scene_manager.cpp  scene_manager.h
src/editor/settings/: editor_settings.h
src/editor/systems/: editor_camera_system.h
src/editor/ui/: asset_manager.cpp  asset_manager.h  editor_console.cpp  editor_console.h  editor_ui_manager.cpp  editor_ui_manager.h  inspector.cpp  inspector.h  scene_hierarchy.cpp  scene_hierarchy.h  viewport.cpp  viewport.h
src/editor/ui/interface/: asset_manager.cpp  asset_manager.h  editor_console.cpp  editor_console.h  inspector.cpp  inspector.h  scene_hierarchy.cpp  scene_hierarchy.h  statistics.cpp  statistics.h  viewport.cpp  viewport.h
src/editor/ui/interface/modals/: save_scene_as_modal.cpp  save_scene_as_modal.h  types.h
src/engine/: engine.cpp  engine.h
src/engine/entities/: manager.h  system_registration.h  types.h
src/engine/entities/components/: component_manager.h  entity_component_base.cpp  velocity_component.cpp
src/engine/entities/components/tags/: active_camera_tag_component.h
src/engine/entities/components_system/: component_array.h  component_base.h  component_manager.h
src/engine/entities/components_system/components/: children_component.h  local_to_world_component.h  local_transform_component.h  parent_component.h  physics_settings_component.h  player_controller_component.h  renderable_component.h  transform_component.h  velocity_component.h
src/engine/entities/components_system/tags/: editor_camera_tag_component.h  internal_tag_component.h
src/engine/entities/system/: camera_system.cpp  camera_system.h  display_system.cpp  display_system.h  movement_system.cpp  movement_system.h  player_controller_system.cpp  player_controller_system.h  system_manager.h  transform_system.cpp  transform_system.h
src/engine/io/: input_system.cpp  input_system.h
src/engine/logging/: logger.cpp  logger.h
src/engine/models/mesh_manager/: abstract_mesh_manager.cpp  abstract_mesh_manager.h  mesh_manager.cpp  mesh_manager.h
src/engine/models/texture_manager/: abstract_texture_manager.cpp  abstract_texture_manager.h  vulkan_texture_manager.cpp  vulkan_texture_manager.h
src/engine/renderer/: abstract.cpp  abstract.h  base_vertex.cpp  base_vertex.h  window.cpp  window.h
src/engine/renderer/vulkan/: consts.h  pipeline_builder.cpp  pipeline_builder.h  render_graph.cpp  render_graph.h  resource_tracker.cpp  resource_tracker.h  shader_module_cache.cpp  shader_module_cache.h  swapchain.cpp  swapchain.h  types.h  utils.cpp  utils.h  vertex.cpp  vertex_utils.cpp  vertex_utils.h  vma_usage.cpp  vulkan_device.cpp  vulkan_device.h  vulkan_renderer.cpp  vulkan_renderer.h
src/engine/renderer/vulkan/shaders/: main.frag  main.vert
src/engine/scenes/: scene.cpp  scene.h
src/engine/serialization/: scene_serializer.cpp  scene_serializer.h
src/engine/shaders/: compile.cpp  compile.h  types.h
src/engine/utils/: circular_buffer.h  entity_utils.h  math_utils.cpp  math_utils.h  strings.cpp  strings.h  timestamp.cpp  timestamp.h
src/engine/utils/entities/: hierarchy.cpp  hierarchy.h  iteration.h
src/engine/utils/macros/: log_macros.h
src/engine/utils/renderer/: deletion_queue.cpp  deletion_queue.h
src/entities/: manager.h
src/entities/components/: camera_component.cpp  camera_component.h  entity_component_base.h  renderable_component.cpp  renderable_component.h  transform_component.h
src/entities/components/tags/: active_camera_tag_component.cpp
src/entities/system/: camera_system.h  display_system.cpp  display_system.h  system.h  system_manager.cpp
src/models/mesh_manager/: abstract_mesh_manager.h  vulkan_mesh_manager.cpp  vulkan_mesh_manager.h
src/renderer/: abstract.h
src/renderer/vulkan/: consts.h  types.h  utils.cpp  utils.h  vertex.h  vulkan_renderer.cpp  vulkan_renderer.h
src/shaders/: compile.cpp  compile.h
src/utils/: entity_utils.cpp  entity_utils.h  math_utils.cpp  type_utils.h  vectors.h
src/utils/concepts/: hashable.h
